<resources>
    <string name="app_name">MovieDB2023</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="vote_average_example">Vote average: 5</string>
    <string name="title_example">Evil Dead Rise</string>
    <string name="title_list">List</string>
    <string name="title_favorites">Favorites</string>
    <string name="release_date_example">Release date: 2023-04-12</string>
    <string name="summary_example">summary</string>
    <string name="detail">Detail</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
</resources>