<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.edwinacubillos.moviedb2023.ui.list.ListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_list_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.edwinacubillos.moviedb2023.ui.favorites.FavoritesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.edwinacubillos.moviedb2023.ui.detail.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="movie"
            app:argType="com.edwinacubillos.moviedb2023.server.model.Movie" />
    </fragment>

</navigation>